package fr.prefecture.sidsic.dashboard_sidsic.dto;

import fr.prefecture.sidsic.dashboard_sidsic.enums.EtatAchat;
import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class EtatAchatDTO {
    private EtatAchat etat;

}
