package fr.prefecture.sidsic.dashboard_sidsic.enums;

public enum EtatMouvement {
    STAGE,
    DéPART,
    ARRIVéE
}
