package fr.prefecture.sidsic.dashboard_sidsic.enums;

public enum EtatPret {
    EN_COURS,
    RENDU,
    EN_RETARD
}
