package fr.prefecture.sidsic.dashboard_sidsic.enums;

public enum EtatTache {
    à_FAIRE,
    EN_COURS,
    TERMINé

}
